--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
     "@types/react-native-vector-icons": "^6.4.12",
     "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.2.0"
   },
