--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "@types/randomcolor": "^0.5.7",
     "@types/react-native-vector-icons": "^6.4.12",
     "native-base": "^3.4.25",
+    "randomcolor": "^0.6.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.9.0",
