--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/randomcolor": "^0.5.7",
     "@types/react-native-vector-icons": "^6.4.12",
     "native-base": "^3.4.25",
@@ -24,7 +25,9 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.19.0",
     "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -41,7 +44,9 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "react-native-flipper": "^0.177.0",
     "react-test-renderer": "18.1.0",
+    "redux-flipper": "^2.0.2",
     "typescript": "^4.8.3"
   },
   "jest": {
