--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-picker": "^5.0.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.19.0",
     "react-native-svg": "12.1.1",
