--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/randomcolor": "^0.5.7",
     "@types/react-native-vector-icons": "^6.4.12",
+    "axios": "^1.3.2",
+    "jwt-decode": "^3.1.2",
     "native-base": "^3.4.25",
     "randomcolor": "^0.6.2",
     "react": "18.1.0",
@@ -30,7 +33,9 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
