--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-firebase/app": "^17.2.0",
+    "@react-native-firebase/storage": "17.2.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
@@ -52,9 +54,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
-    "react-native-flipper": "^0.177.0",
     "react-test-renderer": "18.1.0",
-    "redux-flipper": "^2.0.2",
     "typescript": "^4.8.3"
   },
   "jest": {
