--- a/ios/DevArenaChatApplication/Info.plist
+++ b/ios/DevArenaChatApplication/Info.plist
@@ -41,6 +41,13 @@
 	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Photo library usage</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  	<string>Location 1</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+  	<string>Location 2</string>
+	 <key>NSLocationAlwaysUsageDescription</key>
+ 	 <string>Location 3</string>
+	
 	<key>UIAppFonts</key>
 	<array>
 		<string>Zocial.ttf</string>
