--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-native-firebase/app": "^17.2.0",
     "@react-native-firebase/storage": "17.2.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
@@ -25,6 +26,7 @@
     "randomcolor": "^0.6.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.0.1",
     "react-native-linear-gradient": "^2.6.2",
@@ -37,7 +39,8 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.2"
+    "redux-saga": "^1.2.2",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
